# filter-agda-dependency-graph

./: LICENSE  README.md  filter-agda-dependency-graph.cabal  filter-agda-dependency-graph.hs  stack.yaml
