name:                filter-agda-dependency-graph
version:             0.1.0.0
synopsis:            Filter the output of agda --dependency-graph to avoid library modules.
description:         Filter the output of agda --dependency-graph to avoid library modules.
license:             BSD3
license-file:        LICENSE
author:              Tillmann Rendel
maintainer:          rendel@informatik.uni-marburg.de
copyright:           Copyright 2013 Tillmann Rendel
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable filter-agda-dependency-graph
  main-is:             filter-agda-dependency-graph.hs
  -- other-modules:       
  build-depends:       array >=0.4 && < 0.6,
                       base >=4.6 && < 4.8,
                       containers ==0.5.*,
                       directory ==1.2.*,
                       filepath ==1.3.*,
                       graphviz >= 2999.16 && < 2999.18,
                       text >= 0.11 && <1.2
